Configurando página home de analistas y agregando la fuente de texto Barlow-Thin

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .Header {
-    background-color: #023047;
+    background-color: #023E8A;
     color: white;
     font-family: 'Barlow-SemiBold';
     font-size: 2rem;
