--- a/src/components/Boton/Boton.module.css
+++ b/src/components/Boton/Boton.module.css
@@ -20,11 +20,13 @@
     align-items: center;
     text-align: center;
     justify-self: center;
-    font-size: 13rem;
+    font-size: 10rem;
 }
 
 .CrearElemento p:nth-child(2) {
-    font-size: 2rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    font-size: 1.5rem;
     font-family: 'Barlow-Thin';
 }
 
