--- a/src/pages/EpicasAnalistas/EpicasAnalistas.module.css
+++ b/src/pages/EpicasAnalistas/EpicasAnalistas.module.css
@@ -12,7 +12,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 33% 34% 33%;
     justify-content: center;
     align-items: center;
 }
