--- a/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
+++ b/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
@@ -1,4 +1,4 @@
-.CriteriosAnalistas {
+.PlantillasAnalistas {
     display: grid;
     grid-template-columns: 15% 85%;
 }
@@ -12,7 +12,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 33% 34% 33%;
     justify-content: center;
     align-items: center;
 }
