--- a/src/pages/ProyectosAnalistas/ProyectosAnalistas.module.css
+++ b/src/pages/ProyectosAnalistas/ProyectosAnalistas.module.css
@@ -6,4 +6,13 @@
 .ContenedorPagina {
     height: 100vh;
     width: 100%;
+    display: grid;
+    grid-template-rows: 15% 85%;
+}
+
+.SegundoContenedorPagina {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-content: center;
+    align-items: center;
 }
