--- a/src/pages/CrearEpicas/CrearEpicas.module.css
+++ b/src/pages/CrearEpicas/CrearEpicas.module.css
@@ -17,8 +17,6 @@
     height: 80%;
 }
 
-
-
 .SegundoContenedorPagina form {
     width: 100%;
     height: 100%;
@@ -35,7 +33,7 @@
 }
 
 .SegundoContenedorPagina input {
-    font-family: 'Barlow-Thin';
+    font-family: 'Barlow-Regular';
     align-self: center;
     border: 1px solid rgba(0,0,0,.2);
     padding-left: 1rem;
