--- a/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
+++ b/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
@@ -12,7 +12,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 33% 34% 33%;
+    grid-template-columns: 25% 25% 25% 25%;
     justify-content: center;
     align-items: center;
 }
