--- a/src/pages/ProyectosAnalistas/ProyectosAnalistas.module.css
+++ b/src/pages/ProyectosAnalistas/ProyectosAnalistas.module.css
@@ -12,7 +12,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 25% 25% 25% 25%;
     justify-content: center;
     align-items: center;
 }
