--- a/src/components/MenuLateral/MenuLateral.module.css
+++ b/src/components/MenuLateral/MenuLateral.module.css
@@ -1,9 +1,11 @@
 .MenuLateral {
     min-height: 100vh;
-    width: 100%;
+    width: 15%;
     background-color: #023E8A;
     display: grid;
     grid-template-rows: 22% 78%;
+    top: 0px;
+    position: fixed;
 }
 
 .Perfil {
