--- a/src/pages/VerEpicas/VerEpicas.module.css
+++ b/src/pages/VerEpicas/VerEpicas.module.css
@@ -1,1 +1,34 @@
-.VerEpicas {}
+.VerEpicas {
+    display: grid;
+    grid-template-columns: 15% 85%;
+    min-height: 100vh;
+}
+
+.ContenedorPagina {
+    grid-column: 2;
+    min-height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 15% 85%;
+}
+
+.ContenedorPagina table {
+    justify-self: center;
+    width: 85%;
+}
+
+table th {
+    background-color: #023E8A;
+    color: white;
+    font-size: 1.5rem;
+}
+
+table th, table td{    
+    text-align: center;
+    border: 1px solid rgba(0,0,0,.1);
+    font-family: 'Barlow-Regular';
+}
+
+table td {
+    font-size: 1.3rem;
+}
