--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -33,7 +33,36 @@
 
 }
 
-.Formulario input {
+.DivFormulario {
+    justify-self: flex-end;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+}
+
+.IconoOjo {
+    font-size: 2rem;
+    justify-self: center;
+    align-self: center;
+}
+
+.IconoOjo:hover {
+    cursor: pointer;
+}
+
+.Input2 {
+    grid-column: 2;
+    justify-self: center;
+    width: 100%;
+    height: 45%;
+    border: 1px solid rgba(0,0,0,.5);
+    padding: 1rem;
+    font-family: 'Barlow-Regular';
+    font-size: 1.2rem;
+}
+
+.Input1 {
     justify-self: center;
     height: 45%;
     width: 60%;
@@ -41,16 +70,30 @@
     padding: 1rem;
     font-family: 'Barlow-Regular';
     font-size: 1.2rem;
+
 }
 
 .Formulario input:focus {
     outline: 0;
 }
 
-.Formulario button {
-    height: 60%;
-    width: 30%;
+.DivNotRobot {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 35% 30% 18% 17%;
     justify-self: center;
+}
+
+.DivNotRobot div {
+    align-self: center;
+    justify-self: center;
+}
+
+.DivNotRobot button {
+    grid-column: 2;
+    height: 60%;
+    width: 100%;
+    justify-self: flex-end;
     align-self: center;
     color: white;
     background-color: #023E8A;
@@ -61,7 +104,6 @@
     border-radius: 5px;
 }
 
-.Formulario button:hover {
+.DivNotRobot button:hover {
     cursor: pointer;
 }
-
