--- a/src/components/FormularioCrear/FormularioCrear.module.css
+++ b/src/components/FormularioCrear/FormularioCrear.module.css
@@ -2,7 +2,15 @@
     width: 100%;
     height: 80%;
     display: grid;
+    grid-template-rows: 40% 10% 40% 10%;
+}
+
+.FormularioCrear div {
+    height: 100%;
+    width: 100%;
+    display: grid;
     grid-template-columns: 30% 70%;
+    align-self: flex-end;
 }
 
 .FormularioCrear label {
@@ -15,13 +23,20 @@
 .FormularioCrear input {
     font-family: 'Barlow-Regular';
     align-self: center;
-    border: 1px solid rgba(0,0,0,.2);
     padding-left: 1rem;
     font-size: 1.3rem;
     width: 80%;
-    height: 70%;
+    height: 80%;
 }
 
 .FormularioCrear input:focus {
     outline: none;
+}
+
+.FormularioCrear p {
+    padding: 0;
+    margin: 0;
+    margin-left: 30%;
+    align-self: flex-start;
+    color: red;
 }
