--- a/src/components/FormularioCrear/FormularioCrear.module.css
+++ b/src/components/FormularioCrear/FormularioCrear.module.css
@@ -5,7 +5,15 @@
     grid-template-rows: 40% 10% 40% 10%;
 }
 
-.FormularioCrear div {
+.FormularioAlternativo {
+    width: 100%;
+    height: 80%;
+    display: grid;
+    row-gap: .5rem;
+    grid-template-rows: 25% 5% 25% 5% 25% 5%;
+}
+
+.FormularioCrear div, .FormularioAlternativo div{
     height: 100%;
     width: 100%;
     display: grid;
@@ -13,14 +21,14 @@
     align-self: flex-end;
 }
 
-.FormularioCrear label {
+.FormularioCrear label, .FormularioAlternativo label {
     text-align: center;
     font-size: 1.5rem;
     font-family: 'Barlow-Regular';
     align-self: center;
 }
 
-.FormularioCrear input {
+.FormularioCrear input, .FormularioAlternativo input{
     font-family: 'Barlow-Regular';
     align-self: center;
     padding-left: 1rem;
@@ -29,11 +37,11 @@
     height: 80%;
 }
 
-.FormularioCrear input:focus {
+.FormularioCrear input:focus, .FormularioAlternativo input:focus {
     outline: none;
 }
 
-.FormularioCrear p {
+.FormularioCrear p, .FormularioAlternativo p {
     padding: 0;
     margin: 0;
     margin-left: 30%;
