--- a/src/pages/CrearEpicas/CrearEpicas.module.css
+++ b/src/pages/CrearEpicas/CrearEpicas.module.css
@@ -18,4 +18,19 @@
     height: 80%;
 }
 
+.BordersNegros {
+    border: 1px solid rgba(0,0,0,.2);
+}
+
+.BordesRojos {
+    border: 1px solid red;
+}
+
+.VisibleTrue {
+    visibility: visible;
+}
+
+.VisibleFalse {
+    visibility: hidden;
+}
 
