--- a/src/pages/EditarProyectos/EditarProyectos.module.css
+++ b/src/pages/EditarProyectos/EditarProyectos.module.css
@@ -1,4 +1,4 @@
-.EpicasAnalistas {
+.EditarProyectos {
     display: grid;
     grid-template-columns: 15% 85%;
 }
@@ -13,8 +13,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 50% 50%;
-    justify-content: center;
+    grid-template-rows: 80% 20%;    
     align-items: center;
+    height: 80%;
 }
-
