--- a/src/pages/EditarPlantillas/EditarPlantillas.module.css
+++ b/src/pages/EditarPlantillas/EditarPlantillas.module.css
@@ -1,4 +1,4 @@
-.CrearCriterios {
+.EditarPlantillas {
     display: grid;
     grid-template-columns: 15% 85%;
 }
@@ -14,25 +14,6 @@
 .SegundoContenedorPagina {
     display: grid;
     grid-template-rows: 80% 20%;    
-    align-items: center;
-    height: 80%;
+    align-content: center;
+    height: 100%;
 }
-
-.BordersNegros {
-    border: 1px solid rgba(0,0,0,.2);
-}
-
-.BordesRojos {
-    border: 1px solid red;
-}
-
-.VisibleTrue {
-    visibility: visible;
-}
-
-.VisibleFalse {
-    visibility: hidden;
-}
-
-
-
