--- a/src/pages/HistoriasAnalistas/HistoriasAnalistas.module.css
+++ b/src/pages/HistoriasAnalistas/HistoriasAnalistas.module.css
@@ -13,7 +13,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 33% 34% 33%;
+    grid-template-columns: 50% 50%;
     justify-content: center;
     align-items: center;
 }
