--- a/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
+++ b/src/pages/PlantillasAnalistas/PlantillasAnalistas.module.css
@@ -13,7 +13,7 @@
 
 .SegundoContenedorPagina {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
     justify-content: center;
     align-items: center;
 }
