--- a/src/components/TablaVer/TablaVer.module.css
+++ b/src/components/TablaVer/TablaVer.module.css
@@ -30,17 +30,10 @@ table td {
 }
 
 .IconoAcciones {
+    padding: .5rem;
     justify-self: center;
+    align-self: center;
     color: #023E8A;
-}
-
-.IconoAcciones:nth-child(1), .IconoAcciones:nth-child(2) {
-    align-self: flex-start;
-    padding-bottom: .5rem;
-}
-
-.IconoAcciones:nth-child(3), .IconoAcciones:nth-child(4) {
-    align-self: flex-end;
 }
 
 .IconoAcciones:hover {
